--- a/_posts/2022-06-25-jekyll.md
+++ b/_posts/2022-06-25-jekyll.md
@@ -1,5 +1,5 @@
 ---
-title: First post
+title: Deploying a static website on github with Jekyll & Chirpy
 date: 2022-06-25 14:00
 categories: [webdev, github, jekyll]
 tags: [webdev, github, jekyll]     # TAG names should always be lowercase
